--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body
     background-color: #000000;
     color: #ffffff;
     font-family: Arial;
+    color:white;
 }
 
 h1
@@ -13,13 +14,12 @@ h1
 
 .maindiv
 {
-    background-color: #ffffff;
-    color: #000000;
-    width: 500px;
-    padding: 20px;
-    border-radius: 25px;
-    margin-left: auto;
-    margin-right: auto;
+    background-color:white;
+    color:black;
+    width:300px;
+    padding:20px;
+    border-radius:25px;
+    align-content: center;
 }
 
 
@@ -37,10 +37,7 @@ table td
 #compute
 {
     margin-bottom: 10px;
-    background-color: blue;
-    color: white;
-    height: 40px;
-    width: 325px;
+    
 }
 #principal{
     height: 25px;
