--- a/style.css
+++ b/style.css
@@ -14,11 +14,13 @@ h1
 
 .maindiv
 {
-    background-color:white;
-    color:black;
-    width:300px;
-    padding:20px;
-    border-radius:25px;
+    background-color: #ffffff;
+    color: #000000;
+    width: 500px;
+    padding: 20px;
+    border-radius: 25px;
+    margin-left: auto;
+    margin-right: auto;
     align-content: center;
 }
 
